i change the font size

--- a/age cal.html
+++ b/age cal.html
@@ -19,7 +19,7 @@
         var dob = new Date(userinput);
         if (userinput == null || userinput == "") {
           document.getElementById("message").innerHTML =
-            "**Choose a date please!";
+            "Choose a date please!";
           return false;
         } else {
           //calculate month difference from current date in time
@@ -63,7 +63,7 @@
         border-radius: 5%;
       }
       .size {
-        font-size: 2em;
+        font-size: 1.5em;
         color: black;
         font-weight: bold;
         /* padding-top: 2%; */
